@@ -27,6 +27,7 @@ extern const GstTTMLToken *GstTTMLUtilsTokensTimeBase;
 extern const GstTTMLToken *GstTTMLUtilsTokensClockMode;
 extern const GstTTMLToken *GstTTMLUtilsTokensUnicodeBIDI;
 extern const GstTTMLToken *GstTTMLUtilsTokensDirection;
+extern const GstTTMLToken *GstTTMLUtilsTokensWritingMode;
 extern const GstTTMLToken *GstTTMLUtilsTokensSMPTEImageType;
 extern const GstTTMLToken *GstTTMLUtilsTokensSMPTEEncoding;
 
